# ai-dev-tools-zoomcamp-homework

./: pyproject.toml
01-todo/: main.py  pyproject.toml
01-todo/config/: settings.py
01-todo/core/: admin.py  models.py  tests.py  urls.py  views.py
01-todo/core/migrations/: 0001_initial.py
01-todo/core/templates/: home.html  todo_form.html
config/: settings.py
core/: admin.py  models.py  urls.py  views.py
core/templates/: base.html  home.html  todo_confirm_delete.html
